fixes bugs in the code